# computer-after-sales-ai

./: README.md  pyproject.toml
core/: config.py  factory.py  logger.py  paths.py  prompt_manager.py
core/conf/: config.yaml
data/: kb_management.db
data/sessions/root1/: default_session.json  session_1773567835625_b0mwxvpmp.json
data_pipeline/: description.md
data_pipeline/crawlers/: crawlers.md  manual_crawler.py
data_pipeline/processing/: html_parser.py
data_pipeline/utils/: storage.py
frontend/agent_web_ui/src/: App.vue  style.css
frontend/knowlege_platform_ui/: package-lock.json  package.json
logs/knowledge_service/: debug.log.2026-03-13  info.log.2026-03-13
scripts/: build_vector_db.py
services/customer_service_backend/: main.py
services/customer_service_backend/agents/: service_agent.py  supervisor_agent.py  tech_agent.py
services/customer_service_backend/api/: router.py  schemas.py
services/customer_service_backend/database/: sqlite_pool.py
services/customer_service_backend/prompts/: location_prompts.md  service_prompts.md  supervisor_prompts_v1.md  tech_prompts.md
services/customer_service_backend/service/: agent_service.py  session_service.py  stream_response_service.py
services/customer_service_backend/utils/: geo_utils.py  text_util.py  (+1 more)
services/knowledge_platform_backend/: README.md  main.py  requirements.txt  setup.py
tests/: test_kb_client.py  test_llm_config.py  test_multi_agent.py  test_parser.py  test_prompt_loading.py  test_service_node.py  test_tech_node.py
tests/test_rag/: test_data_pipeline.py  test_retriever.py
(+763 files in other folders)
